[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Objects/Player/WeaponHolster.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Turret/Turret.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 130.231

[node name="Turret" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.38419e-07, -20 )
scale = Vector2( 0.25, 0.625 )
texture = ExtResource( 1 )

[node name="WeaponHolster" parent="." instance=ExtResource( 2 )]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="ShotTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
